# beanifier

./: .gitignore  Cargo.toml  README.md  beanifier-web-4348530a9ec44052.js  beanifier-web-4348530a9ec44052_bg.wasm  beanifier-web-c214211c7cc21828.js  beanifier-web-c214211c7cc21828_bg.wasm  index.html  justfile
.github/workflows/: ci.yml  pages.yml
crates/beanifier-cli/: Cargo.toml
crates/beanifier-cli/src/: lib.rs  main.rs
crates/beanifier-cli/tests/: cli.rs
crates/beanifier-core/: Cargo.toml
crates/beanifier-core/src/: beanify.rs  config.rs  lib.rs  rng.rs  syllables.rs
crates/beanifier-web/: Cargo.toml  index.html
crates/beanifier-web/src/: lib.rs  main.rs
